<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.androidprojects.sunilsharma.martialartclub.MainActivity">

    <item
        android:id="@+id/add_martial_art"
        android:title="@string/add_martial_art"
        app:showAsAction="ifRoom"></item>


    <item
        android:id="@+id/delete_martial_art"
        android:title="@string/delete_martial_art"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/update_martial_art"
        android:title="@string/update_martial_art"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/martial_art_prices_reset"
        android:title="@string/reset_martial_art_price"
        app:showAsAction="ifRoom"></item>
</menu>
